src/test/resources/model_test/valid/FourEntitiesDirty_model/Country.entity
//xxxx
Country //xxx
//xxx
 { //xxx
	id //xxx
	 : 
	 integer 
	 {@Id};
	 
	 //xxxx
name //xx
//xx
	: // xxx
string;// xxx
} //xx
//xxx
		//xxx
//xxx
