src/test/resources/model_test/invalid/FourEntitiesModel/Country.entity
Country { // Bad name
	id : int {@Id};
	name : string { @FooBarZzz };
	foo : long ;
}
